# Corrosiff

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
benches/: README.md  flim_read_benchmark.rs  mask_flim_benchmark.rs  mask_frames_benchmark.rs  metadata_benchmarks.rs  opening_files_benchmark.rs  read_frames_benchmark.rs
benches/siffpy_comparison/: local_consts.py  opening_files.py  read_frames.py
src/: data.rs  lib.rs  main.rs  metadata.rs  siff_to_tiff.rs  siffreader.rs  tiff.rs  utils.rs
src/data/: image.rs  time.rs
src/data/image/: dimensions.rs  flim.rs  intensity.rs  utils.rs
src/data/image/flim/: empirical_lifetime.rs  histogram.rs  phasor.rs
src/data/image/flim/empirical_lifetime/: registered.rs  unregistered.rs
src/data/image/flim/phasor/: registered.rs  unregistered.rs
src/data/image/intensity/: siff.rs  tiff.rs
src/data/image/intensity/siff/: registered.rs  siff_frame.rs  tiff.rs  unregistered.rs
src/file_data/: file_types.rs  frame_data.rs  mod.rs
src/tests/: io_tests.rs
src/tiff/: file_format.rs  ifd.rs  tags.rs
src/utils/: parallelize_op.rs
