[package]
name = "corrosiff"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0"
description = "Rust-based tools for parsing and modifying `.siff` FLIM data files."
keywords = ["flim", "microscopy", "scientific imaging", "siff", "neuroscience"]
rust-version = "1.66.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
binrw = "*"
bytemuck = {version = "1.16.0", features = ["extern_crate_std"]}
itertools = "*"
ndarray = "*"
rayon = "*" 
rand = "*"

[profile.release]
#lto = false
lto = "fat"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "opening_files_benchmark"
harness = false

[[bench]]
name = "read_frames_benchmark"
harness = false

# [[bench]]
# name = "mask_frames_benchmark"
# harness = false

# [[bench]]
# name = "flim_read_benchmark"
# harness = false

# [[bench]]
# name = "metadata_benchmarks"
# harness = false

[[bin]]
name = "siff_to_tiff"
path = "src/bin/siff_to_tiff.rs"

[lib]
name = "corrosiff"
path = "src/lib.rs"
crate-type = ["rlib","dylib"]

[[test]]
name = "integration"
path = "src/tests/io_tests.rs"